Раскидываем по разным потокам воркеры, время берется через clock